MOD: re-factoring, bug fixing

--- a/modelicaml/org.openmodelica.modelicaml.editor.xtext.modeleditor/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.editor.xtext.modeleditor/build.properties
@@ -4,5 +4,7 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               model/
+               model/,\
+               bin/,\
+               src/
 
