MOD: new marker type reference for markers from the new validation plugin

--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/plugin.xml
@@ -93,6 +93,9 @@
                id="org.eclipse.ui.ide.markerType"
                visible="true">
          </markerFieldReference>
+         <markerTypeReference
+               id="org.eclipse.emf.validation.problem">
+         </markerTypeReference>
       </markerContentGenerator>
    </extension>
    <!--<extension
