--- a/org.modelica.mdt.debug.ui/src/org/modelica/mdt/debug/ui/propertypages/PropertyPageMessages.properties
+++ b/org.modelica.mdt.debug.ui/src/org/modelica/mdt/debug/ui/propertypages/PropertyPageMessages.properties
@@ -26,15 +26,23 @@ ExceptionFilterEditor_19=Add Class to Scope
 ExceptionFilterEditor_20=Could not open class selection dialog for scope definition
 ExceptionFilterEditor_22=&Select a class to add to the scope of the breakpoint:
 JavaBreakpointPage_0=Hit count must be a positive integer
-JavaBreakpointPage_10=Create Breakpoint for {0}
-JavaBreakpointPage_11=Class Prepare Breakpoint
 JavaBreakpointPage_3=&Type:
 JavaBreakpointPage_4=&Hit Count:
+JavaBreakpointPage_4_1=The breakpoint is not in effect until it has been hit count times.
 JavaBreakpointPage_5=&Enabled
 JavaBreakpointPage_6=Suspend Policy:
 JavaBreakpointPage_7=Suspend Thread
 JavaBreakpointPage_8=Suspend VM
 JavaBreakpointPage_9=Unable to cancel breakpoint creation
+JavaBreakpointPage_10=Create Breakpoint for {0}
+JavaBreakpointPage_11=Class Prepare Breakpoint
+JavaBreakpointPage_12=Time:
+JavaBreakpointPage_13=Equal
+JavaBreakpointPage_14=Greater
+JavaBreakpointPage_15=Greater Equal
+JavaBreakpointPage_16=Less
+JavaBreakpointPage_17=Less Equal
+JavaBreakpointPage_18=Time value must be a positive number
 JavaExceptionBreakpointPage_0=&Caught Exception
 JavaExceptionBreakpointPage_1=&Uncaught Exception
 JavaLineBreakpointPage_0=Must suspend on field access or modification
@@ -57,6 +65,7 @@ JavaLineBreakpointPage_17=value of condition ch&anges
 JavaLineBreakpointPage_18=Line Breakpoint
 JavaLineBreakpointPage_19=Watchpoint
 JavaLineBreakpointPage_20=Method Breakpoint
+JavaLineBreakpointPage_21=File:
 ThreadFilterEditor_1=&Restrict to Selected Thread(s):
 ThreadFilterEditor_2=Must select a thread in selected targets
 InstanceFilterEditor_0=Restricted to Selected Ob&ject(s)
