--- a/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
@@ -5,7 +5,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            name="Modelica Models"
+            name="Modelica Models Synchronization"
             icon="icons/code.png"
             category="org.openmodelica.modelicaml.gen.modelica.category1"
             class="org.openmodelica.modelicaml.modelica.importer.views.ModelicaOMCCodeViewer"
@@ -15,11 +15,11 @@
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
       <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
+            targetID="org.openmodelica.modelicaml.perspective">
          <view
                ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
+               relative="org.openmodelica.modelicaml.view.componentstree"
+               relationship="bottom"
                id="org.openmodelica.modelicaml.modelica.importer.views.ModelicaOMCCodeViewer">
          </view>
       </perspectiveExtension>
@@ -68,16 +68,16 @@
             locationURI="toolbar:org.eclipse.ui.main.toolbar">
          <toolbar
                id="org.openmodelica.modelicaml.modelica.toolbar"
-               label="ModelicaML Modelica">
+               label="ModelicaML Modelica Models Synchronization">
             <separator
                   name="org.openmodelica.modelicaml.modelica.importer.separator3">
             </separator>
             <command
                   commandId="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies"
                   icon="icons/code.png"
-                  label="Synchronize Imported Modelica Models"
+                  label="Synchronize Modelica Models"
                   style="push"
-                  tooltip="Synchronize Modelica Model Proxies">
+                  tooltip="Synchronize Modelica Models">
                <visibleWhen>
                   <with
                         variable="activeEditorId">
@@ -103,7 +103,7 @@
             locationURI="popup:org.eclipse.papyrus.modelexplorer.modelexplorer.popup">
          <menu
                icon="icons/code2.png"
-               label="ModelicaML: Code Synchronization">
+               label="ModelicaML: Modelica Models Synchronization">
             <command
                   commandId="org.openmodelica.modelicaml.modelica.commands.disconnectfromcodesync"
                   icon="icons/launch_disconnect.gif"
@@ -185,15 +185,15 @@
          point="org.eclipse.ui.commands">
       <command
             id="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies"
-            name="Synchronize Modelica Model Proxies">
+            name="Synchronize Modelica Models">
       </command>
       <command
             id="org.openmodelica.modelicaml.modelica.commands.disconnectfromcodesync"
-            name="Disconnect From Code Synchronization">
+            name="Disconnect From Modelica Models Synchronization">
       </command>
       <command
             id="org.openmodelica.modelicaml.modelica.commands.connecttocodesync"
-            name="Connect To Code Synchronization">
+            name="Connect To Modelica Models Synchronization">
       </command>
    </extension>
    <extension
