--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
-         id="org.openmodelica.modelicaml.modelicamlMarker"
+         id="org.openmodelica.modelicaml.marker"
          name="ModelicaML Simulation"
          point="org.eclipse.core.resources.markers">
       <persistent
@@ -116,6 +116,7 @@
          <menu
                icon="resources/icons/icons16/generate_code.gif"
                label="ModelicaML: Validation and Code Generation">
+            <!--
             <command
                   commandId="org.openmodelica.modelicaml.gen.modelica.commands.ValidateModelicaMLModel"
                   icon="resources/icons/icons16/validate.gif"
@@ -145,6 +146,7 @@
                   </with>
                </visibleWhen>
             </command>
+            -->
             <command
                   commandId="org.eclipse.papyrus.modelexplorer.ValidateDelMarkersFromSubtreeCommand"
                   icon="resources/icons/icons16/errorwarning_tab.gif"
@@ -254,8 +256,24 @@
                </with>
             </visibleWhen>
             <separator
-                  name="org.openmodelica.modelicaml.profile.separator1">
+                  name="org.openmodelica.modelicaml.profile.separator1"
+                  visible="true">
             </separator>
+            <command
+                  commandId="org.openmodelica.modelicaml.helper.commands.toolbar.generatesimmodels"
+                  icon="resources/icons/icons16/new_testsuite.gif"
+                  label="Create Design Verification Models"
+                  style="push"
+                  tooltip="Create Design Verification Models">
+               <visibleWhen>
+                  <with
+                        variable="activeEditorId">
+                     <equals
+                           value="org.eclipse.papyrus.core.papyrusEditor">
+                     </equals>
+                  </with>
+               </visibleWhen>
+            </command>
             <command
                   commandId="org.openmodelica.modelicaml.helper.commands.runtests"
                   icon="resources/icons/icons16/tscriptrun.gif"
